--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -89,6 +89,10 @@
     </div>
   </body>
   <script>
+    // disable react devtools
+    if (typeof window.__REACT_DEVTOOLS_GLOBAL_HOOK__ === 'object') {
+      window.__REACT_DEVTOOLS_GLOBAL_HOOK__.inject = function () {};
+    }
     /**
      * @description: Prompt that the browser version is too low
     */
