fix: test custome content

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -30,7 +30,10 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-
+      <!--customize_header-->
+      这部分是header233
+      <h1>123</h1>
+      <!--customize_header-->
       <div id="spin-mask">
         <noscript>
           <style>
